[gd_scene load_steps=2 format=3 uid="uid://dap2q5m8nxr4d"]

[ext_resource type="Script" path="res://scripts/ui/turn_order_display.gd" id="1"]

[node name="TurnOrderDisplay" type="PanelContainer"]
offset_right = 200.0
offset_bottom = 300.0
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="RoundLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Round: 1"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TurnList" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
